# vscode-pdm

./: .gitignore  README.md  ffmpeg cmd.txt  ffmpeg_installer.py  main.py  pyproject.toml  test-streamlink.py  utils.py  waifu2x-ncnn-vulkan-python-win.txt
chzzk/: chzzk_recorder.py  hook-streamlink.py  main.py  recorders.py  utils.py
chzzk/utils/: utils.py
classes/: empty_video_generator.py  ffmpeg_installer.py  video_converter.py  video_file_mover.py
errors/: 240713_1.txt  240713_3.txt  240713_4.txt  240714_2.txt  240718_1.txt  240718_4.txt  240718_5.txt  240718_6.txt  240718_7.txt  240718_8.txt  240720_1.txt  240720_2.txt  240721_1.txt  240721_6.txt  240721_7.txt  240724_1.txt  240724_2.txt  240724_3.txt  240724_4.txt  240725_1.txt  240725_2.txt  240725_3.txt  240725_4.txt  240727_1.txt  240727_2.txt  240728_1.txt  240728_2.txt  240728_3.txt  240802_1.txt  240805_1.txt  240805_2.txt  240806_1.txt  240808_1.txt  240811_2.txt  240811_3.txt  240811_4.txt  240812_1.txt  240812_2.txt  240812_3.txt  240817_1.txt  (+1 more)
errors/fixed/: 240713_2_fixed.txt  240714_3_fixed.txt  240717_1_fixed.txt  240717_2_fixed.txt  240718_2_fixed.txt  240718_3_fixed.txt  240719_1_fixed.txt  240721_2_fixed.txt  240721_3_fixed.txt  240721_4_fixed.txt  240721_5_fixed.txt  240811_1.txt  240817_3.txt
errors/notabug/: 240714_1.txt  240716_1.txt  240717_3.txt  240717_4.txt  240717_5.txt  240722_1.txt
projects/test-asyncio/: main.py  pyproject.toml
projects/test-keyboard/: README.md  main.py  pyproject.toml
projects/test-processes/: main-pyqt6.py  main-tk.py  pyproject.toml
projects/test-progress/: main.py
recorder-module-4/: build.bat  commit.bat  dist.bat  pyproject.toml
recorder-module-4/recorders/: recorders.py
recorder-module-4/utils/: utils.py
samples/: test-interactive.py  test-keyboard.py  test-loggerflag.py
test-arena/: README.md  main.py  pyproject.toml
test-arena/recorders/: recorders.py  recorders_afreeca.py  recorders_chzzk.py  recorders_tiktok.py
test-arena/utils/: config.py  tiktok_enums.py  tiktok_errors.py  tiktok_utils.py  utils.py
test-arena2/: README.md  asdasd.py  main.py  pyproject.toml
test-arena2/recorders/: afreeca.py  chzzk.py  recorder.py  recorder_tk.py  sample.py  test_recorder_tk.py  test_recorder_tk_streamlink.py
test-arena2/utils/: config.py  utils.py
test-intergrate/: README.md  build-test.bat  build.bat  command_builder.py  config.json  config_test.json  dist.bat  main-jsonargs.py  main.py  pyproject.toml  test-jsonargs.py  test.py
test-intergrate/cookies/: cookies.txt
test-jsonext/: README.md  command_builder.py  config.py  data.json  json_processor.py  main.py  pyproject.toml
test-keyboard/utils/: utils.py
test-listview/: README.md  main.py  pyproject.toml
test-logger/: log_general.txt  log_info.txt  main.py  pyproject.toml  recorder.py  utils.py
test-move/: ffmpeg_installer.py  logutil.py  main.py  test-space.py
test-processes/: README.md  main-abs.py
test-pyqt5/: build.bat  main.py  pyproject.toml
test-request/: README.md  main.py  pyproject.toml  request.py
test-trayicon/: README.md  main.py  pyproject.toml
test-watchdog/: README.md  main.py  pyproject.toml  spinner.py
