[tool.poetry]
name = "vscode-pyenv-poetry"
version = "0.1.0"
description = ""
authors = ["pikamonvvs <pikamonvvs@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg-python = "^0.2.0"
streamlink = "^6.7.4"
requests = "^2.32.3"
loguru = "^0.7.2"
aioconsole = "^0.7.1"
keyboard = "^0.13.5"
httpx = "^0.27.0"
httpx-socks = "^0.9.1"
h2 = "^4.1.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
