[tool.poetry]
name = "test-trayicon"
version = "0.1.0"
description = ""
authors = ["pikamonvvs <pikamonvvs@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyinstaller = {version = "^6.8.0", python = ">=3.12,<3.13"}



[tool.pdm]
distribution = false

[project]
name = "test-trayicon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pikamonvvs", email = "pikamonvvs@naver.com"},
]
dependencies = [
    "PyQt6>=6.7.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

